--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Eventmanagement",
+  "name": "eventmanagement",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/cli": "^14.1.1",
+    "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "eventmanagement": "file:",
+    "Eventmanagement": "file:",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
