--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.75.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
   },
