--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "eventmanagement": "file:",
     "Eventmanagement": "file:",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-camera": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.2",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
