--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@react-native-community/cli": "^14.1.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "eventmanagement": "file:",
     "Eventmanagement": "file:",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-camera": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
